--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,29 @@
-{% assign year = site.time | date: '%Y' %}
-{% if site.copyright and site.copyright != '' %}
 <footer class="container mb-4">
-    <small class="text-muted">Copyright &copy;{{ year }} {{ site.copyright }}. All rights reserved.</small>
+<div class="row justify-content-center">
+    <div class="col-lg-9">
+        <div class="row">
+            <div class="col-lg-2">合辦單位：</div>
+            <div class="col-lg-2 text-center py-3">
+                <a href="https://www.iis.sinica.edu.tw/zh/index.html" target="_blank"><img src="assets/images/iis-logo.png"/></a>
+            </div>
+            <div class="col-lg-2 text-center py-3">
+                <a href="https://www.citi.sinica.edu.tw/" target="_blank"><img src="assets/images/citi-logo.png"/></a>
+            </div>
+            <div class="col-lg-3 text-center py-3">
+                <a href="https://codata.sinica.edu.tw/" target="_blank"><img src="assets/images/cdt-logo.png"/></a>
+            </div>
+            <div class="col-lg-3 text-center py-3">
+                <a href="https://www.nstc.gov.tw/" target="_blank"><img src="assets/images/nstc-logo.png"/></a>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-3">
+        <div class="row">
+            <div class="col-lg-5">籌辦單位：</div>
+            <div class="col-lg-7 text-center">
+                <a href="https://lab.depositar.io/" target="_blank"><img src="assets/images/depositar-logo.png"/></a>
+            </div>
+        </div>
+    </div>
+</div>
 </footer>
-{% endif %}
