modify footer img and test again

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,10 @@
         <div class="row">
             <div class="col-lg-2">合辦單位：</div>
             <div class="col-lg-2 text-center py-3">
-                <a href="https://www.iis.sinica.edu.tw/zh/index.html" target="_blank"><img src="assets/images/iis-logo.png"/></a>
+                <a href="https://www.iis.sinica.edu.tw/zh/index.html" target="_blank"><img  width="70%" src="assets/images/iis-logo.png"/></a>
             </div>
             <div class="col-lg-2 text-center py-3">
-                <a href="https://www.citi.sinica.edu.tw/" target="_blank"><img src="assets/images/citi-logo.png"/></a>
+                <a href="https://www.citi.sinica.edu.tw/" target="_blank"><img width="70%" src="assets/images/citi-logo.png"/></a>
             </div>
             <div class="col-lg-3 text-center py-3">
                 <a href="https://codata.sinica.edu.tw/" target="_blank"><img src="assets/images/cdt-logo.png"/></a>
