--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="container mb-4">
 <div class="row justify-content-center">
-    <div class="col-lg-9">
+    <div class="col-lg-12">
         <div class="row">
             <div class="col-lg-2">合辦單位：</div>
             <div class="col-lg-2 text-center py-3">
@@ -17,10 +17,10 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-3">
+    <div class="col-lg-12">
         <div class="row">
-            <div class="col-lg-5">籌辦單位：</div>
-            <div class="col-lg-7 text-center">
+            <div class="col-lg-2">籌辦單位：</div>
+            <div class="col-lg-10101010101010101010 text-center">
                 <a href="https://lab.depositar.io/" target="_blank"><img src="assets/images/depositar-logo.png"/></a>
             </div>
         </div>
