--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,6 +6,9 @@ layout: default
 {% include header.html %}
 
 <main class="my-4">
+    <div class="container">
+	<img src="assets/images/banner.png">
+    </div>
     <div class="container px-5 py-3 bg-gray-2 rounded">
         <h1 class="display-3">{{ title }}</h1>
         <p class="lead">{{ description }}</p>
