--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,7 +6,7 @@ layout: default
 {% include header.html %}
 
 <main class="my-4">
-    <div class="container">
+    <div class="container banner">
 	<img src="assets/images/banner.png">
     </div>
     <div class="container px-5 py-3 bg-gray-2 rounded">
