--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -20,8 +20,8 @@
 
 .banner {
     height: 300px;
-    background-image: url(../assets/images/banner.png);
+    background-image: url(../images/banner.png);
     //background-position: right;
-    //background-size: 850px;
+    background-size: 1350px;
 }
 
