add index about info

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -35,3 +35,7 @@
 .navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
     color: #ffffff;
 }
+
+.bg-gray-2 {
+   background-color:#ffffff;
+}
