modify footer add license and contact info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,4 +26,8 @@
         </div>
     </div>
 </div>
+<hr>
+<address id="about" class="vcard body">ODW.TW: <a href="https://odw.tw/2013/index.html" target="_blank" rel="noopener noreferrer">2013</a> | <a href="https://odw.tw/2014/index.html" target="_blank" rel="noopener noreferrer">2014</a> | <a href="https://odw.tw/jwodr2015/index.html" target="_blank" rel="noopener noreferrer">2015</a> | <a href="https://odw.tw/2016/index.html" target="_blank" rel="noopener noreferrer">2016</a> | <a href="https://odw.tw/2017/index.html" target="_blank" rel="noopener noreferrer">2017</a> | <a href="https://odw.tw/RDMW2018/index.html" target="_blank" rel="noopener noreferrer">2018</a> | <a href="https://odw.tw/RDMTW2020/index.html" target="_blank" rel="noopener noreferrer">2020</a> | <a href="https://odw.tw/2021/" target="_blank" rel="noopener noreferrer">2021</a>
+    
+    &nbsp;&nbsp;&nbsp;CONTACT US:&nbsp;rdm.contact AT depositar.io<br><a href="http://creativecommons.org/licenses/by/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons License"></a><br>This work is licensed under a <a href="http://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons Attribution 4.0 International License</a>.</address>
 </footer>
