--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -76,6 +76,14 @@ layout: default
                                 <div class="row col-lg-10 border-start border-3 border-{{ classes }}">
                                     {% if event.category %}
                                     <h5 class="fw-normal m-0 mb-2">{{ event.title }}</h5>
+                                    <div class="btn-group-md m-0 mb-2" role="group">
+                                        {% if event.video_url %}
+                                        <a href="{{ event.video_url }}" target="_blank" type="button" class="btn btn-primary fw-normal">錄影</a>
+                                        {% endif %}
+                                        {% if event.slides_url %}
+                                        <a href="{{ event.slides_url }}" target="_blank" type="button" class="btn btn-primary fw-normal">簡報</a>
+                                        {% endif %}
+                                    </div>
                                     <p class="fw-light m-0">{{ event.subtitle }}</p>
                                     {% else %}
                                     <h5 class="fw-light text-muted m-0 mb-2">{{ event.title }}</h5>
